Fix chip alignment

--- a/src/features/Table/components/styles.css
+++ b/src/features/Table/components/styles.css
@@ -62,6 +62,10 @@
   @apply hidden;
 }
 
+.table__player-stack {
+  @apply whitespace-nowrap;
+}
+
 /* 1 Top player */
 .table__player:nth-child(1) {
   @apply top-0 left-1/2 -translate-x-1/2 -translate-y-1/2;
@@ -172,11 +176,13 @@
  # Chips
  ************************************************/
 .chip {
-  @apply inline-block align-bottom;
+  @apply inline-block align-middle;
+  --border-size: 2px;
+  margin-top: -var(--border-size);
   width: 1rem;
   height: 1rem;
   border-radius: 100%;
-  border: 2px white dotted;
+  border: var(--border-size) white dotted;
   box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
 }
 
